--- a/backend/package.json
+++ b/backend/package.json
@@ -16,12 +16,14 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@prisma/client": "^5.6.0",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1"
   },
   "devDependencies": {
-    "typescript": "^4.9.0",
-    "firebase-functions-test": "^3.1.0"
+    "firebase-functions-test": "^3.1.0",
+    "prisma": "^5.6.0",
+    "typescript": "^4.9.0"
   },
   "private": true
 }
